# RLM-mcp

./: .gitignore  README.md  pyproject.toml
examples/: README.md  benchmark_corpus.txt  benchmark_mcp_vs_flat.py  benchmark_report.md  benchmark_results.json
rlm_mcp/: __init__.py  sandbox_worker.py  server.py
scripts/: __init__.py  mcp_client.py
