[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rlm-mcp"
version = "0.1.0"
description = "A dependency-light MCP server that applies Recursive Language Model ideas to large-file exploration."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "OpenAI Codex" }]
dependencies = []

[project.scripts]
rlm-mcp = "rlm_mcp.server:main"

[tool.setuptools.packages.find]
include = ["rlm_mcp*"]
